@@ -361,6 +361,16 @@
          </item>
          <item>
           <property name="text">
+           <string>BBD (Unlicensed)</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>Hitek (Unlicensed)</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
            <string>Pokémon Jade/Diamond (Unlicensed)</string>
           </property>
          </item>
